fixed template names

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 			<a href="#"><img class="logo" src="img/logo_light.png" alt=""/></a>
 			<nav>
 				<ul data-vedor-list="menu" data-vedor-path="/simple-edit/sublime/" data-vedor-sortable>
-					<template data-vedor-template="menuItem"><li><a data-vedor-field="link" href="">About Us</a></li></template>
-					<template data-vedor-template="menuItem2"><li style="font-style: italic;"><a data-vedor-field="link" href="">About Them</a></li></template>
+					<template data-vedor-template="Menu Item"><li><a data-vedor-field="link" href="">About Us</a></li></template>
 				</ul>
 			</nav>
 		</header>
@@ -100,7 +99,7 @@
 				</div>
 
 				<ul class="clearfix" data-vedor-list="blogposts" data-vedor-sortable>
-					<template data-vedor-template="delay0">
+					<template data-vedor-template="Delay: 0">
 						<li class="animated wow fadeInDown">
 							<div class="media">
 								<div class="date">
@@ -116,7 +115,7 @@
 							</a>
 						</li>
 					</template>
-					<template data-vedor-template="delay4">
+					<template data-vedor-template="Delay: .4">
 						<li class="animated wow fadeInDown" data-wow-delay=".4s">
 							<div class="media">
 								<div class="date">
