--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title data-vedor-field="meta title">Sublime - stunning free HTML5/CSS3 website template</title>
+	<title>Sublime - stunning free HTML5/CSS3 website template</title>
 	<meta charset="utf-8">
-	<meta data-vedor-field="meta author" name="author" content="pixelhint.com">
-	<meta data-vedor-field="meta description" name="description" content="Sublime Stunning free HTML5/CSS3 website template"/>
+	<meta name="author" content="pixelhint.com">
+	<meta name="description" content="Sublime Stunning free HTML5/CSS3 website template"/>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fancybox-thumbs.css">
 	<link rel="stylesheet" type="text/css" href="css/fancybox-buttons.css">
@@ -25,8 +25,9 @@
 		<header class="wrapper light">
 			<a href="#"><img class="logo" src="img/logo_light.png" alt=""/></a>
 			<nav>
-				<ul data-vedor-list="menu" data-vedor-path="/simple-edit/sublime/" data-vedor-sortable>
-					<template data-vedor-template="Menu Item"><li><a data-vedor-field="link" href="">About Us</a></li></template>
+				<ul data-vedor-list="menu" data-vedor-path="/simply-edit/sublime/" data-vedor-sortable>
+					<template data-vedor-template="menuItem"><li><a data-vedor-field="link" href="">About Us</a></li></template>
+					<template data-vedor-template="menuItem2"><li style="font-style: italic;"><a data-vedor-field="link" href="">About Them</a></li></template>
 				</ul>
 			</nav>
 		</header>
@@ -99,7 +100,7 @@
 				</div>
 
 				<ul class="clearfix" data-vedor-list="blogposts" data-vedor-sortable>
-					<template data-vedor-template="Delay: 0">
+					<template data-vedor-template="delay0">
 						<li class="animated wow fadeInDown">
 							<div class="media">
 								<div class="date">
@@ -115,7 +116,7 @@
 							</a>
 						</li>
 					</template>
-					<template data-vedor-template="Delay: .4">
+					<template data-vedor-template="delay4">
 						<li class="animated wow fadeInDown" data-wow-delay=".4s">
 							<div class="media">
 								<div class="date">
