--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
 			</nav>
 		</div>		
 	</footer><!--  End footer  -->
-    <script src="http://se-cdn.muze.nl/simply-edit.js" data-api-key="github"></script>
+    <script src="https://simplyedit.io/1/simply-edit.js" data-api-key="github"></script>
 </body>
 </html>
