--- a/index.html
+++ b/index.html
@@ -155,6 +155,17 @@
 			</nav>
 		</div>		
 	</footer><!--  End footer  -->
-    <script src="//cdn.simplyedit.io/1/simply-edit.js" data-api-key="github"></script>
+  	<script>
+		var seSettings = {
+			'pageTemplates' : {
+				'templates': [
+					{name: "Main page", template: "index.html"}
+				]
+			}
+		};
+	</script>
+    <script src="//cdn.simplyedit.io/1/simply-edit.js" 
+	    data-api-key="github"
+	    data-simply-settings="seSettings"></script>
 </body>
 </html>
